--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
+#
+# BibleForge
+# 
+# @date    09-01-09
+# @version 0.1 alpha 2
+# @link http://BibleForge.com
+# @license Reciprocal Public License 1.5 (RPL1.5)
+# 
+
 .htaccess
 config.php
