Modified .gitignore to allow for greater server customization.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@
 #
 
 config.php
+.htaccess
+robots.txt
+sitemap.xml
+favicon.ico #NOTE: This is temporarily ignored until a real favicon is created.
