--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 #
 # BibleForge
-# 
+#
 # @date    09-01-09
-# @version 0.2 alpha
+# @version alpha (α)
 # @link    http://BibleForge.com
-# @license Reciprocal Public License 1.5 (RPL1.5)
+# @license Affero General Public License Version 3 (AGPL-3.0)
 # @author  BibleForge <info@bibleforge.com>
 #
 
