Load all of the language files at start up.

--- a/server/config.js.sample
+++ b/server/config.js.sample
@@ -4,5 +4,6 @@ this.config = {
         user: "user",
         pass: "password",
         base: "bf"
-    }
+    },
+    static_path: "../client/"
 };
