--- a/server/config.js.sample
+++ b/server/config.js.sample
@@ -1,3 +1,15 @@
+/**
+ * BibleForge
+ *
+ * @date    05-15-12
+ * @version alpha (α)
+ * @link    http://BibleForge.com
+ * @license GNU Affero General Public License 3.0 (AGPL-3.0)
+ * @author  BibleForge <info@bibleforge.com>
+ */
+
+"use strict";
+
 this.config = {
     db: {
         host: "127.0.0.1",
