--- a/server/config.js.sample
+++ b/server/config.js.sample
@@ -11,14 +11,15 @@
 "use strict";
 
 this.config = {
-    /// Whether or not to cache the contents of index_non-js.html.  Should be TRUE on production servers.
-    cache_simple_html: true,
+    cache_simple_html: true, /// Whether or not to cache the contents of index_non-js.html.  Should be TRUE on production servers.
+    /// The database options.
     db: {
-        host: "127.0.0.1",
-        user: "user",
-        pass: "password",
-        base: "bf"
+        host: "127.0.0.1", /// The hostname to connect to
+        user: "user",      /// The database username
+        pass: "password",  /// The user's password
+        base: "bf"         /// The database name
     },
-    use_ssl: false,
-    static_path: "../client/"
+    use_ssl: false, /// Whether or not to use SSL (partially implemented)
+    port: 7777,     /// The port for the BibleForge server to listen to.  This is the port that HTTP server forwards requests to, no the port of the HTTP server.
+    static_path: "../client/" /// The folder containing files sent to the client.  The server also includes some of them.
 };
