Updated .gitignore to ignore files in the client directory.

--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@
 # @author  BibleForge <info@bibleforge.com>
 #
 
-.htaccess
-google*
+client/.htaccess
+client/google*
 client/robots.txt
 client/sitemap.xml
 server/node_modules
